2001-02-03  Marius Andreiana  <mandreiana@yahoo.com>

	* po/ro.po: Added Romanian translation (thanks to Tutu Valentin)

2001-01-30  Kjartan Maraas  <kmaraas@gnome.org>

	* po/no.po: Updated Norwegian translation.
	
2001-01-27  John Harper  <jsh@eazel.com>

	* po/it.po: updated Italian translation from Michele Campeotto
	<micampe@f2s.com>

	* themes/Crux/theme.jl,
	themes/Crux/inactive:menu-button-pressed.png,
	themes/Crux/inactive:menu-button-hilight.png,
	themes/Crux/inactive:button-pressed.png,
	themes/Crux/inactive:button-hilight.png: buttons on inactive
	frames now prelight like active frames

	* po/pl.po: updated Polish translation from Daniel Koc
	<kocio@bigfoot.com>

2001-01-25  John Harper  <jsh@eazel.com>

	* themes/Crux/theme.jl: s/MacOS/Mac OS/

2001-01-20  John Harper  <jsh@eazel.com>

	* configure.in: version 0.36

2001-01-19  John Harper  <jsh@eazel.com>

	* themes/Makefile.in: 
	* themes/Crux/theme.jl,	themes/Crux/*.png, themes/Crux/README:

	New theme `Crux' - designed by Arlo, implemented by me. The new
	default theme. Recolors itself to match the GTK+ theme, has
	various customizable options

2001-01-17  John Harper  <jsh@eazel.com>

	* sawfish.spec.in: unset LC_ALL, LINGUAS and LANG before
	building

2001-01-11  John Harper  <jsh@eazel.com>

	* themes/gtk/theme.jl: rewrote to use define instead of let*
	for creating bindings

	* po/it.po, po/fr.po: updated translations from Michele
	Campeotto <micampe@f2s.com> and Christian Marillat
	<marillat.christian@wanadoo.fr> respectively

2001-01-05  John Harper  <jsh@eazel.com>

	* configure.in: version 0.35

2000-12-20  John Harper  <jsh@eazel.com>

	* po/sawfish-xgettext (helper): corrected off-by-one error when
	grabbing real name from defgroup forms

	* po/it.po: update from Michele Campeotto <micampe@f2s.com>

2000-12-18  John Harper  <jsh@eazel.com>

	* po/zh_TW.Big5.po: new file, ``po file for the zh_TW locale in
	big5 encoding'', from Chun-Chung Chen <cjj@u.washington.edu>
