@@ -16,7 +16,7 @@
    along with this program; if not, write to the Free Software
    Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 
-   $Id: theme.jl,v 1.2 2001/01/26 05:09:32 jsh Exp $
+   $Id: theme.jl,v 1.3 2001/01/27 21:22:29 jsh Exp $
 
    Authors: John Harper <jsh@eazel.com>
 |#
@@ -443,4 +443,4 @@
 (add-frame-style 'Crux get-frame)
 
 ;; recalibrate frames when the window-name changes
-(call-after-property-changed 'WM_NAME rebuild-all)
+(call-after-property-changed 'WM_NAME rebuild-frame)
