@@ -1,3 +1,8 @@
+2001-01-29  John Harper  <jsh@eazel.com>
+
+	* themes/Crux/theme.jl: was rebuilding _all_ windows when the
+	WM_NAME of one window changed. Fixed this inefficiency
+
 2001-02-03  Marius Andreiana  <mandreiana@yahoo.com>
 
 	* po/ro.po: Added Romanian translation (thanks to Tutu Valentin)
